<resources>
    <string name="app_name">weather_viewer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">home</string>
    <string name="favourite">favourite</string>
    <string name="alert">alert</string>
    <string name="setting">setting</string>
    <string name="no_data_available">No data  available</string>
    <string name="add_fav">add_fav</string>
    <string name="enable_alarm">enable alarm</string>
    <string name="event">event</string>
    <string name="description">description</string>
    <string name="reputation_daily">daily repute..?</string>
    <string name="start">start</string>
    <string name="current_mode">current mode</string>
    <string name="_c">C</string>
    <string name="mostly_clear">mostly clear</string>
    <string name="save">save</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="add_custom_location">Add custom location</string>
    <string name="gps">GPS</string>
    <string name="her_you_can_chose_your_location_setting">Choose your location setting</string>
    <string name="her_you_can_chose_language">Choose language</string>
    <string name="imperial">Imperial</string>
    <string name="standard">Standard</string>
    <string name="choose_units_of_measurement">Choose units of measurement</string>
    <string name="metric">Metric</string>
    <string name="celsius_and_wind_speed_in_meter_sec">Temperature unit : <b>Celsius</b> \nWind speed : <b>meter/sec</b> </string>
    <string name="kelvin_and_wind_speed_in_meter_sec">Temperature unit : <b>kelvin</b> \nWind speed : <b>meter/sec</b> </string>
    <string name="fahrenheit_and_wind_speed_in_miles_hour">Temperature unit : <b>fahrenheit</b> \nWind speed : <b>miles/hour</b> </string>
    <string name="reload">reload</string>
    <string name="current">Current</string>
    <string name="today">Today</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="content">Content</string>
    <string name="this_week">This week</string>
    <string name="_3_15">3 : 15</string>
    <string name="location_not_enabel">Location Not Enabled ..!</string>
    <string name="to_load_condetions">To load the current weather data you have to enable location</string>
    <string name="enabel">Enable</string>
    <string name="load_from_last_known_data">Load From Last Known data</string>
    <string name="you_areoffline">You are offline ..!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="are_you_sure_location">Confirm adding this location to store it as your location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="off" translatable="false">off</string>
    <string name="on" translatable="false">on</string>
    <string name="you_are_offline">You are offline ..!</string>
    <string name="you_want_to_add">Confirm adding this location to store it as favourite place</string>
</resources>