<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

<data>

</data>
<!--   standard, Temperature in Kelvin and wind speed in meter/sec-->
<!--    metric     Celsius and wind speed in meter/sec,-->
<!--   imperial  For temperature in Fahrenheit and wind speed in miles/hour, use-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".setting_fragment.SettingFragment"
            tools:ignore="ScrollViewSize">

            <TextView
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="30dp"
                android:text="@string/setting"
                android:textColor="@color/purple_700"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/unitsImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundTint = "@color/purple_500"
                android:contentDescription="@string/setting"
                android:paddingHorizontal="10dp"
                android:src="@drawable/ic_units_24"
                app:layout_constraintBottom_toBottomOf="@id/her"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/her"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/choose_units_of_measurement"
                android:textColor="@color/purple_700"
                app:layout_constraintBottom_toBottomOf="@id/unitsImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/unitsImage"
                app:layout_constraintTop_toBottomOf="@id/setting" />

            <RadioGroup
                android:id="@+id/unitsRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/her">

                <RadioButton
                    android:id="@+id/metricRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="start"
                    android:layout_marginBottom="20dp"
                    android:buttonTint="@color/purple_700"
                    android:checked="false"
                    android:text="@string/metric"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/purple_700"
                    android:textColorLink="@color/purple_700"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/standardRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="start"
                    android:layout_marginBottom="20dp"
                    android:buttonTint="@color/purple_700"
                    android:checked="false"
                    android:text="@string/standard"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/purple_700"
                    android:textColorLink="@color/purple_700"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/imperialRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="start"
                    android:layout_marginBottom="20dp"
                    android:checked="false"
                    android:buttonTint="@color/purple_700"
                    android:text="@string/imperial"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="@id/unitsRadioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/unitsRadioGroup"
                app:layout_constraintTop_toTopOf="@id/unitsRadioGroup">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingHorizontal="20dp"
                    android:text="@string/celsius_and_wind_speed_in_meter_sec"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingHorizontal="20dp"
                    android:text="@string/kelvin_and_wind_speed_in_meter_sec"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingHorizontal="20dp"
                    android:text="@string/fahrenheit_and_wind_speed_in_miles_hour"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="50dp"
                android:background="@color/purple_500"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/unitsRadioGroup" />

            <ImageView
                android:id="@+id/langImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/setting"
                android:paddingHorizontal="10dp"
                android:src="@drawable/ic_language_24"
                app:layout_constraintBottom_toBottomOf="@id/her"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear"
                app:layout_constraintVertical_bias="0.046" />

            <TextView
                android:id="@+id/her2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:paddingHorizontal="10dp"
                android:text="@string/her_you_can_chose_language"
                android:textColor="@color/purple_700"
                app:layout_constraintBottom_toBottomOf="@id/langImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/langImage"
                app:layout_constraintTop_toTopOf="@id/langImage"
                app:layout_constraintVertical_bias="0.0" />

            <RadioGroup
                android:id="@+id/langRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingHorizontal="10dp"
                android:weightSum="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/her2">

                <RadioButton
                    android:id="@+id/EnglishRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="start"
                    android:layout_marginBottom="20dp"
                    android:buttonTint="@color/purple_700"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/english"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/ArabicRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="start"
                    android:layout_marginBottom="20dp"
                    android:buttonTint="@color/purple_700"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/arabic"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="50dp"
                android:background="@color/purple_500"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/langRadioGroup" />

            <ImageView
                android:id="@+id/locationImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/setting"
                android:paddingHorizontal="10dp"
                android:src="@drawable/ic_gps_24"
                app:layout_constraintBottom_toBottomOf="@id/her"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear3"
                app:layout_constraintVertical_bias="0.046" />

            <TextView
                android:id="@+id/her3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:paddingHorizontal="10dp"
                android:text="@string/her_you_can_chose_your_location_setting"
                android:textColor="@color/purple_700"
                app:layout_constraintBottom_toBottomOf="@id/locationImage"
                app:layout_constraintStart_toEndOf="@id/locationImage"
                app:layout_constraintTop_toTopOf="@id/locationImage"
                app:layout_constraintVertical_bias="0.0" />

            <RadioGroup
                android:id="@+id/locationRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:buttonTint="@color/purple_700"
                android:paddingHorizontal="10dp"
                android:weightSum="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/her3">

                <RadioButton
                    android:id="@+id/gpsRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="start"
                    android:layout_marginBottom="20dp"
                    android:buttonTint="@color/purple_700"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/gps"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/addLocationRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="start"
                    android:layout_marginBottom="20dp"
                    android:buttonTint="@color/purple_700"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/add_custom_location"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </RadioGroup>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/locationRadioGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>