<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        app:cardCornerRadius="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingVertical="5dp"
            android:layout_width="match_parent"
            android:background="#287EC8E3"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/currentTime"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:text="@string/_3_15"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/currentModeImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/current_mode"
                android:src="@drawable/ic_cloud"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/currentTemp"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:text="@string/_c"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currentTime" />
            <TextView
                android:id="@+id/tempUnit"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:text="@string/_c"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                app:layout_constraintStart_toEndOf="@id/currentTemp"
                app:layout_constraintTop_toBottomOf="@id/currentTime" />
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="70dp"
                android:layout_height="wrap_content"
                android:text="@string/mostly_clear"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                app:layout_constraintBottom_toBottomOf="@id/currentTemp"
                app:layout_constraintStart_toEndOf="@id/currentTemp"
                app:layout_constraintTop_toBottomOf="@id/currentTime" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>